fix input border radius on ios 3

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@
   }
 
   input[type='text'],
+  input[type='email'],
   textarea {
     -webkit-appearance: none;
   }
